fix viewport on mobile devices JS fix

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ a:visited {
 
 .hero {
 	background-color: #f4ead7;
-	min-height: 100vh;
+	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
 	position: relative;
 	display: flex;
 	flex-direction: column;
